@@ -6,6 +6,8 @@ New features:
 		* Add possibility to skip storing the data from columns and matrices in the saved file
 	* [analysis]
 		* Save and load custom functions for fit, equation curve and function values
+	* [spreadsheet]
+		* Pivot table
 	* [worksheet]
 		* Inset plot areas - plot areas added as child of another plot area
 		* Improved axis ticks location. They don't need to be always placed at the edges of the axis if does not look nicely (!700)
